added glassmorphism to the landing page design

--- a/src/webpages/LandingPage/LandingPage.scss
+++ b/src/webpages/LandingPage/LandingPage.scss
@@ -4,17 +4,34 @@
   padding: 7vh 2vw;
 }
 
+.hero-section-wrapper {
+  position: relative;
+
+  width: fit-content;
+  margin: auto;
+}
+
 .landing-page-hero {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 20px;
 
-  padding: 2vh 2vw;
+  background-color: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(10px) saturate(100%) contrast(45%) brightness(130%);
+
   border-radius: 10px;
-  // background: rgb(60, 255, 255);
-  // background: linear-gradient(0deg, rgba(60, 255, 255, 1) 27%, rgba(22, 208, 216, 1) 100%);
-  // box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.336);
+  padding: 2vh 2vw;
+
+  position: relative;
+  z-index: 2;
+}
+
+.hero-circle {
+  position: absolute;
+  z-index: 1;
+
+  border-radius: 50%;
 }
 
 .landing-page-hero-left {
@@ -24,13 +41,13 @@
   width: 50%;
 
   h1 {
-    font-family: 'Comic neue' , cursive;
+    font-family: 'Comic neue', cursive;
     font-size: 3rem;
     color: $color-accent-shade;
   }
 
   p {
-    font-family: 'Comic neue' , cursive;
+    font-family: 'Comic neue', cursive;
     font-size: 1.2rem;
   }
 }
