--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -4,7 +4,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  z-index: 5;
   background-color: #fff;
   padding: 5px  2vw 0 2vw;
   margin: 0;
@@ -45,6 +44,9 @@
   gap: 20px;
   align-items: center;
 
+  position: relative;
+  z-index: 2;
+
   span {
     font-size: 25px;
   }
@@ -54,6 +56,9 @@
   display: flex;
   gap: 0.5vw;
   align-items: center;
+
+  position: relative;
+  z-index: 2;
 
   button {
     width: 35px;
