--- a/src/webpages/LandingPage/LandingPage.scss
+++ b/src/webpages/LandingPage/LandingPage.scss
@@ -41,13 +41,12 @@
   width: 50%;
 
   h1 {
-    font-family: 'Comic neue', cursive;
+    font-family: 'Roboto', cursive;
     font-size: 3rem;
-    color: $color-accent-shade;
   }
 
   p {
-    font-family: 'Comic neue', cursive;
+    font-family: 'Roboto', cursive;
     font-size: 1.2rem;
   }
 }
