bolded awesome link

--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -79,9 +79,9 @@
     width: 60vw;
     height: 40vh;
     position: absolute;
-    z-index: 6;
     background-color: #fff;
     border: 2px solid black;
+    border-top: none;
     left: 20vw;
     align-items: center;
     justify-content: center;
@@ -123,5 +123,8 @@
     .brand-container{
       gap: 10px;
     }
+  }
+  .search-container{
+    display: none;
   }
 }
