--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -5,14 +5,21 @@
   flex-direction: column;
 
   position: relative;
+  z-index: 2;
 
   width: 200px;
   padding: 2px;
   margin: 12px;
   border-radius: 4px;
   border: 1px solid #d0d0d3;
-   &:hover{
-    border:1px solid black;
+
+  background-color: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(10px) saturate(100%) contrast(45%) brightness(130%);
+
+  transition: 1s;
+
+  &:hover, &:focus {
+    backdrop-filter: blur(1px);
   }
 }
 
@@ -27,7 +34,7 @@
   flex-direction: column;
   background: transparent;
   transition: .4s;
- 
+
   img {
     width: 100%;
     display: block;
