--- a/src/components/Folder/Folder.scss
+++ b/src/components/Folder/Folder.scss
@@ -8,17 +8,21 @@
 
   border-radius: 10px;
 
-  overflow: hidden;
-
   cursor: pointer;
   border: 1px solid #d0d0d3;
-  height: fit-content;
+  height: fit-content; // to prevent other folders from moving when height of one changes.
+
+  position: relative;
+  z-index: 2;
+
+  background-color: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(10px) saturate(100%) contrast(45%) brightness(130%);
+
+  transition: 1s;
 
   img {
     height: 320px;
     width: 280px;
-    transition: all 0.2s;
-
   }
 
   h3 {
@@ -27,19 +31,10 @@
     font-family: 'Comic Neue', cursive;
     text-transform: uppercase;
     text-align: center;
-
   }
 
-  &:hover {
-    img {
-      height: 350px;
-      color: unset;
-      transform: scale(1.1);
-    }
-
-    h6 {
-      color: rgb(3, 3, 97);
-    }
+  &:hover, &:focus {
+    backdrop-filter: blur(1px);
   }
 }
 
@@ -48,13 +43,20 @@
   flex-direction: column;
 
   position: relative;
+  z-index: 2;
 
   width: 145px;
   border: 1px solid #d0d0d3;
   margin: 10px;
   border-radius: 4px;
-  &:hover{
-    border: 1px solid black;
+
+  background-color: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(10px) saturate(100%) contrast(45%) brightness(130%);
+
+  transition: 1s;
+
+  &:hover, &:focus {
+    backdrop-filter: blur(1px);
   }
 }
 
@@ -87,7 +89,7 @@
     text-align: center;
     color: black;
   }
-  
+
 }
 
 .folder-options {
@@ -124,7 +126,7 @@
 
   background: $color-primary-shade;
   border-radius: 0 0 4px 4px;
-  
+
   svg {
     path {
       fill: white;
