--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,10 @@ $color-accent-shade: #361108;
 
 body {
   background-color: $color-primary-tint;
+
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 .awesome-link {
