changed background to an svg

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,11 +15,12 @@ $color-accent-shade: #361108;
 }
 
 body {
-  background-color: $color-primary-tint;
-
   display: flex;
   flex-direction: column;
   flex: 1;
+
+  background: url("background.svg") fixed center;
+  background-size: cover;
 }
 
 .awesome-link {
