changed the bg shapes to gradient shapes

--- a/src/index.scss
+++ b/src/index.scss
@@ -20,7 +20,7 @@ body {
   flex-direction: column;
   flex: 1;
 
-  background: url("background.svg") fixed center;
+  background: url("background.svg") fixed;
   background-size: cover;
 }
 
