--- a/src/webpages/LandingPage/LandingPage.scss
+++ b/src/webpages/LandingPage/LandingPage.scss
@@ -12,13 +12,10 @@
   gap: 20px;
 
   background-color: rgba(255, 255, 255, 0.3);
-  backdrop-filter: blur(10px) saturate(100%) contrast(45%) brightness(130%);
+  backdrop-filter: blur(10px) contrast(45%) brightness(130%);
 
   border-radius: 10px;
   padding: 3vh 2vw;
-
-  position: relative;
-  z-index: 2;
 }
 
 .landing-page-hero-left {
