--- a/src/components/Folder/Folder.scss
+++ b/src/components/Folder/Folder.scss
@@ -52,9 +52,8 @@
 
   background-color: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(7px) saturate(100%) contrast(45%) brightness(130%);
-
   transition: 0.3s;
-
+  
   &:hover, &:focus {
     backdrop-filter: blur(2px);
   }
@@ -62,7 +61,8 @@
 
 .open-folder-button {
   border-radius: 4px 4px 0 0;
-
+  
+  cursor: pointer;
   text-decoration: none;
 
   height: 90px;
