--- a/src/webpages/LandingPage/LandingPage.scss
+++ b/src/webpages/LandingPage/LandingPage.scss
@@ -29,9 +29,9 @@
 }
 
 .hero-circle {
-  position: absolute;
-  z-index: 1;
-
+  position: fixed;
+  z-index: -1;
+  display: none;
   border-radius: 50%;
 }
 
