--- a/src/webpages/DashboardPage/DashboardPage.scss
+++ b/src/webpages/DashboardPage/DashboardPage.scss
@@ -2,6 +2,7 @@
 
 .dashboard-container {
   padding: 0 2vw;
+  margin-top: 0 !important;
 }
 
 .files-container {
@@ -50,13 +51,18 @@
   background-color: #fff !important;
   z-index: 10;
   border-bottom: 1px solid #d0d0d3;
-  padding: 10px 0;
-
+  padding: 10px 0px;
+  border-radius: 3px;
+  
 }
 
 @media only screen and (max-width: 572px) {
   .search-btn{
     display: block;
+  }
+  .dashboard-container{
+    padding: 0;
+    margin-top: 0 !important;
   }
   .top {
     button, label {
