--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -13,8 +13,8 @@
   border-radius: 4px;
   border: 1px solid #d0d0d3;
 
-  background-color: rgba(255, 255, 255, 0.3);
-  backdrop-filter: blur(10px) saturate(100%) contrast(45%) brightness(130%);
+  background-color: rgb(255, 255, 255);
+
 
   transition: 1s;
   cursor: pointer;
