animation added in file option

--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -92,6 +92,7 @@
 .file-options-buttons-wrapper {
   display: flex;
   justify-content: space-around;
+  transition: 1s;
 }
 
 .file-preview-modal-body {
