--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -73,25 +73,47 @@
   width: 30vw;
   top: 10px;
   left: 35vw;
-  z-index: 50;
+}
 
-  .body {
-    display: flex;
-    width: 50vw;
-    height: 40vh;
-    position: fixed;
-    background-color: rgba(255, 255, 255, 0.3);
-    backdrop-filter: blur(20px) saturate(100%) contrast(45%) brightness(130%);
-    border: 1px solid #d0d0d3;
-    border-top: none;
-    left: 25vw;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    font-size: 13px;
-    flex-wrap: wrap;
-    overflow-y: scroll;
+.body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 
+  width: 50vw;
+  height: 40vh;
+
+  position: fixed;
+  left: 25vw;
+
+  border-radius: 10px;
+  overflow-y: scroll;
+  background: whitesmoke;
+
+  h1 {
+    font-size: 20px;
+    text-decoration: underline;
+    font-weight: bold;
+  }
+}
+
+.search-control-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+
+  width: fit-content;
+  margin: auto;
+  border: 2px solid black;
+  border-radius: 4px;
+  padding: 5px 10px;
+
+  input {
+    border: none;
+    outline: none;
   }
 }
 
