--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -6,6 +6,7 @@
   align-items: center;
   background-color: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(10px) saturate(100%) contrast(45%) brightness(130%);
+  border: 1px solid #d0d0d3;
   padding: 5px 2vw 5px 2vw;
   margin: 0;
 
@@ -73,69 +74,75 @@
   width: 30vw;
   top: 10px;
   left: 35vw;
-}
+  z-index: 11;
 
-.body {
+  .search-control-wrapper{
+    display: flex;
+    input{
+        width: 100%;
+    }
+  
+  }
+  .body {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-
+  border: 1.5px solid black;
   width: 50vw;
   height: 40vh;
-
+  z-index: 11;
   position: fixed;
   left: 25vw;
-
+  background-color: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(10px) saturate(100%) contrast(45%) brightness(130%);
   border-radius: 10px;
   overflow-y: scroll;
-
-  h1 {
-    font-size: 20px;
-    text-decoration: underline;
-    font-weight: bold;
-  }
+  padding: 10px;
+  
+}
 }
 
-.search-control-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 10px;
 
-  z-index: 1000;
 
-  width: fit-content;
-  margin: auto;
-  border: 2px solid black;
-  border-radius: 4px;
-  padding: 5px 10px;
+// .search-control-wrapper {
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+//   gap: 10px;
 
-  input {
-    border: none;
-    outline: none;
-  }
-}
+//   z-index: 1000;
 
-.search-control-wrapper {
+//   width: fit-content;
+//   margin: auto;
+//   border: 2px solid black;
+//   border-radius: 4px;
+//   padding: 5px 10px;
 
-  border: 2px solid black;
-  border-radius: 4px;
-  padding: 5px 10px;
-  width: fit-content;
+//   input {
+//     border: none;
+//     outline: none;
+//   }
+// }
 
-  input {
-    outline: none;
-    border: none;
+// .search-control-wrapper {
 
-    background: transparent;
-  }
+//   border: 2px solid black;
+//   border-radius: 4px;
+//   padding: 5px 10px;
+//   width: fit-content;
 
-  svg {
-    transition: .5s;
-  }
-}
+//   input {
+//     outline: none;
+//     border: none;
+
+//     background: transparent;
+//   }
+
+//   svg {
+//     transition: .5s;
+//   }
+// }
 
 @media only screen and (max-width: 572px) {
 
