--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -68,14 +68,21 @@
     padding: 0;
   }
 }
-
+  .search-body-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    overflow-y: scroll;
+    input{
+        width: 100%;
+    }
+  
+  }
 .search-container {
   position: fixed;
   width: 30vw;
   top: 10px;
   left: 35vw;
   z-index: 11;
-
   .search-control-wrapper{
     display: flex;
     input{
@@ -100,49 +107,8 @@
   overflow-y: scroll;
   padding: 10px;
   
+  }
 }
-}
-
-
-
-// .search-control-wrapper {
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-//   gap: 10px;
-
-//   z-index: 1000;
-
-//   width: fit-content;
-//   margin: auto;
-//   border: 2px solid black;
-//   border-radius: 4px;
-//   padding: 5px 10px;
-
-//   input {
-//     border: none;
-//     outline: none;
-//   }
-// }
-
-// .search-control-wrapper {
-
-//   border: 2px solid black;
-//   border-radius: 4px;
-//   padding: 5px 10px;
-//   width: fit-content;
-
-//   input {
-//     outline: none;
-//     border: none;
-
-//     background: transparent;
-//   }
-
-//   svg {
-//     transition: .5s;
-//   }
-// }
 
 @media only screen and (max-width: 572px) {
 
