--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -70,6 +70,7 @@
 }
   .search-body-wrapper{
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     overflow-y: scroll;
     input{
