--- a/src/webpages/DashboardPage/DashboardPage.scss
+++ b/src/webpages/DashboardPage/DashboardPage.scss
@@ -19,9 +19,9 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 3vh 2vw;
+  gap: 10px;
 
-  position: relative;
+  padding: 3vh 2vw;
 }
 
 .empty {
