--- a/src/components/Folder/Folder.scss
+++ b/src/components/Folder/Folder.scss
@@ -14,7 +14,21 @@
   background-color: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(7px) saturate(100%) contrast(45%) brightness(130%);
 
-  transition: 0.3s;
+  transition: 0.7s;
+
+  position: relative;
+
+  &::after {
+    content: '';
+
+    width: 100%;
+    height: 1px;
+
+    position: absolute;
+    top: 0;
+
+    background-color: rgba(255,255,255,0.4);
+  }
 
   img {
     height: 320px;
@@ -31,6 +45,12 @@
 
   &:hover, &:focus {
     backdrop-filter: blur(1px) saturate(100%) contrast(50%) brightness(130%);
+    &::after{
+      height: 100%;
+      background-color: rgba(255,255,255,0);
+
+      transition: .4s ease-in-out;
+    }
   }
 }
 
