--- a/src/components/Folder/Folder.scss
+++ b/src/components/Folder/Folder.scss
@@ -22,12 +22,12 @@
     content: '';
 
     width: 100%;
-    height: 1px;
+    height: 0.001px;
 
     position: absolute;
     top: 0;
 
-    background-color: rgba(255,255,255,0.4);
+    background-color: rgba(255,255,255, 0.9);
   }
 
   img {
