--- a/src/webpages/LandingPage/LandingPage.scss
+++ b/src/webpages/LandingPage/LandingPage.scss
@@ -25,7 +25,7 @@
   width: 50%;
 
   h1 {
-    font-family: 'Roboto', cursive;
+    font-family: 'Comic Neue', cursive;
     font-size: 3rem;
   }
 
