tried to fix the modal bug

--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -96,9 +96,14 @@
 }
 
 .image-preview-modal-body {
+  display: flex;
+  justify-content: center;
+
   img {
-    width: 100%;
-    margin: auto;
+    position: absolute;
+    top: 0;
+
+    width: 80vw;
   }
 }
 
