tried to fix the modal bug

--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -102,15 +102,12 @@
   }
 }
 
-.image-preview-modal-body {
+.image-preview-modal {
   display: flex;
   justify-content: center;
 
   img {
-    position: absolute;
-    top: 0;
-
-    width: 80vw;
+    width: 100%;
   }
 }
 
