--- a/src/components/File/File.scss
+++ b/src/components/File/File.scss
@@ -96,18 +96,11 @@
 }
 
 .image-preview-modal {
-  .modal-content {
-    left: -20vw;
-    width: 70vw;
-  }
-}
-
-.image-preview-modal {
-  display: flex;
-  justify-content: center;
-
   img {
-    width: 100%;
+    display: flex;
+    align-self: center;
+
+    width: 80vw;
   }
 }
 
